Update 'e2e-tests-go-jwggnjqy-import' component image to: quay.io/rhtap_qe/e2e-tests-go-jwggnjqy-import:6eabef9c00941df177d18962fc192b6424c751f3@sha256:1edc2e52b6ee95d071af9263e4f4a3613ada60a2040c3a2535a9e31de06dfcbb

--- a/components/e2e-tests-go-jwggnjqy-import/overlays/development/deployment-patch.yaml
+++ b/components/e2e-tests-go-jwggnjqy-import/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: e2e-tests-go-jwggnjqy-import
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/rhtap_qe/e2e-tests-go-jwggnjqy-import:6eabef9c00941df177d18962fc192b6424c751f3@sha256:1edc2e52b6ee95d071af9263e4f4a3613ada60a2040c3a2535a9e31de06dfcbb
+          name: container-image
